--- a/my-app/src/components/Navbar/navbar.module.css
+++ b/my-app/src/components/Navbar/navbar.module.css
@@ -17,25 +17,6 @@
     border-radius: 3em;
   }
 
-  .navLink {
-    background-color: #d8dbe2;
-    flex-direction: row;
-    /* min-width: 10em; */
-    min-width: 6em;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-    padding: 0.5em;
-    margin: 0.5em;
-    border-radius: 0.5em;
-  }
-
-  .navLink:hover {
-    background-color: #d8dbe2;
-    border: 1px solid #58a4b0;
-    color: #58a4b0;
-  }
-
   .hamurgerIcon {
     display: none;
   }
@@ -46,11 +27,6 @@
     overflow: hidden;
     background-color: #58a4b0;
     position: relative;
-    border: red 2px solid;
-  }
-
-  .navLink {
-    display: none;
   }
 
   .navList {
@@ -70,24 +46,17 @@
     background-color: #58a4b0;
     margin-top: 1em;
     margin-left: 1em;
-    border: 1px solid #a9bcd0;
-    background-color: #d8dbe2;
+    border: 2px solid #d8dbe2;
   }
 
   .mobileList {
-    background-color: #58a4b0;
-    text-decoration: none;
     width: 10em;
-  }
-
-  .mobileLink {
-    min-width: 4em;
-    background-color: #d8dbe2;
-    text-decoration: none;
-    padding-left: 2em;
-    border: solid 1px #58a4b0;
-    height: 2em;
-    margin-top: 5px;
-    right: 20px;
+    position: fixed;
+    background-color: #58a4b0;
+    margin-left: 1em;
+    margin-top: -0.5em;
+    border-radius: 0.5em;
+    padding-bottom: 0.5em;
+    border: 1px solid #a9bcd0;
   }
 }
