--- a/my-app/src/components/Footer/footer.module.css
+++ b/my-app/src/components/Footer/footer.module.css
@@ -3,7 +3,7 @@
   /* margin-bottom: 0.5em; */
   border-top: solid 0.5px #a9bcd0;
   padding: 0.5em;
-  background-color: #a9bcd0;
+  background-color: #d8dbe2;
 }
 
 .footerLink {
